<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgotPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:longClickable="false"
    android:clickable="false"
    android:layout_gravity="center_vertical"
    >

    <!-- TextView | Email Text-->
    <TextView
        android:id="@+id/emailText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/forgotpassword_email"
        android:textSize="30sp" />

    <!-- EditText | Email Edit -->
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/forgotpassword_emailHint"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />



    <Button
        android:id="@+id/sendButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword_sendButton"
        android:layout_below="@id/emailEdit"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/checkMailText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/forgotpassword_checkmail"
        android:textSize="25sp" />


</RelativeLayout>



    </ScrollView>


</RelativeLayout>